<resources>
    <string name="app_name">Deloitte Task</string>
    <string name="txt_password">Password</string>
    <string name="txt_date_of_birth">Date of birth</string>
    <string name="txt_phone_number">Phone number</string>
    <string name="txt_national_id">National ID</string>
    <string name="txt_email">Email</string>
    <string name="txt_full_name">Full Name</string>
    <string name="txt_register">Register</string>
    <string name="txt_login">Login</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_sort"><u>Sort</u></string>
    <string name="txt_search">Search</string>
    <string name="txt_dashboard">Dashboard</string>
    <string name="txt_more">More</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_caution">Caution</string>
    <string name="txt_ok">OK</string>
    <string name="txt_cancel">Cancel</string>
    <string name="tx_locale">Locale</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>

    </string-array>
</resources>