<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:context=".ui.non_user_screen.fragments.LoginFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_full_name"
           app:boxCornerRadiusBottomEnd="3dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp">

            <EditText
                android:maxLines="1"
                android:id="@+id/full_name"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_password"
            app:boxCornerRadiusBottomEnd="3dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp">

            <EditText
                android:maxLines="1"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/txt_login"
            android:textAllCaps="false"
            app:cornerRadius="3dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>