<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.deloitte.deloittetask.viewmodels.NonUserViewModel" />
    </data>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.non_user_screen.fragments.LoginFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:context=".ui.non_user_screen.fragments.RegisterFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_full_name"
            error="@{viewModel.useNameError.errorMessage}"
            app:boxCornerRadiusBottomEnd="3dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={viewModel.userName}"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"
            android:layout_marginTop="@dimen/default_margin"
            error="@{viewModel.emailError.errorMessage}"
            app:boxCornerRadiusBottomEnd="3dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            error="@{viewModel.nationalIdError.errorMessage}"
            android:hint="@string/txt_national_id"
            app:boxCornerRadiusBottomEnd="3dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp">

            <EditText
                android:id="@+id/national_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.nationalId}"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/txt_phone_number"
            error="@{viewModel.phoneNumberError.errorMessage}"
            app:boxCornerRadiusBottomEnd="3dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp">

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.phoneNumber}"
                android:inputType="phone"
                android:maxLength="9"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/txt_date_of_birth"
            error="@{viewModel.birthOfDateError.errorMessage}"
            app:boxCornerRadiusBottomEnd="3dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp">

            <EditText
                android:id="@+id/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.birthOfDate}"
                android:inputType="date"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:hint="@string/txt_password"
            error="@{viewModel.passwordError.errorMessage}"
            app:boxCornerRadiusBottomEnd="3dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_margin"
            android:onClick="@{()->viewModel.register()}"
            android:text="@string/txt_register"
            android:textAllCaps="false"
            app:cornerRadius="3dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>